# travel

./: .gitignore  insert_to_ydb.py  meta.yaml  parse_travelata.py  process_travelata.py  process_trevalata_utils.py  pyproject.toml  template_string.txt
sql/: create_travelata_raw.sql
travel/: utils.py
travel/parsing/travelata/: __init__.py  travelata.py  utils.py
travel/workflows/: travelata_process.py
